src/printing_ffi.h

    // Struct for returning printer information
    typedef struct
    {
        char *name;
        uint32_t state;
        char *url;
        char *model;
        char *location;
        char *comment;
        bool is_default;
        bool is_available;
    } PrinterInfo;
    typedef struct
    {
        int count;
        PrinterInfo *printers;
    } PrinterList;
    // Struct for returning print job information
    typedef struct
    {
        uint32_t id;
        char *title;
        uint32_t status;
    } JobInfo;
    typedef struct
    {
        int count;
        JobInfo *jobs;
    } JobList;
    // Struct for a single CUPS option choice
    typedef struct
    {
        char *choice;
        char *text;
    } CupsOptionChoice;
    // Struct for a list of CUPS option choices
    typedef struct
    {
        int count;
        CupsOptionChoice *choices;
    } CupsOptionChoiceList;
    // Struct for a single CUPS printer option
    typedef struct
    {
        char *name;
        char *default_value;
        CupsOptionChoiceList supported_values;
    } CupsOption;
    // Struct for a list of CUPS printer options
    typedef struct
    {
        int count;
        CupsOption *options;
    } CupsOptionList;
    // Struct for a single Windows paper source (bin)
    typedef struct
    {
        short id;
        char *name;
    } PaperSource;
    typedef struct
    {
        int count;
        PaperSource *sources;
    } PaperSourceList;
    // Struct for a single Windows media type
    typedef struct
    {
        short id;
        char *name;
    } MediaType;
    typedef struct
    {
        int count;
        MediaType *types;
    } MediaTypeList;
    // Structs for Windows printer capabilities
    typedef struct
    {
        short id;
        char *name;
        float width_mm;
        float height_mm;
    } PaperSize;
    typedef struct
    {
        int count;
        PaperSize *papers;
    } PaperSizeList;
    typedef struct
    {
        long x_dpi;
        long y_dpi;
    } Resolution;
    typedef struct
    {
        int count;
        Resolution *resolutions;
    } ResolutionList;
    typedef struct
    {
        PaperSizeList paper_sizes;
        PaperSourceList paper_sources;
        ResolutionList resolutions;
        MediaTypeList media_types;
        // New fields for color mode and orientation capabilities
        bool is_color_supported;
        bool is_monochrome_supported;
        bool supports_landscape;
    } WindowsPrinterCapabilities;
    FFI_PLUGIN_EXPORT bool cups_move_job(const char *source_printer, uint32_t job_id, const char *dest_printer, const char *username, const char *password);
    FFI_PLUGIN_EXPORT bool cups_set_job_priority(const char *printer_name, uint32_t job_id, int priority, const char *username, const char *password);
    // Struct for printer attribute query result
    typedef struct
    {
        char *attribute_name;
        char *attribute_value;
        int value_count;       // For array attributes
        char **array_values;   // For array attributes (NULL if value_count <= 1)
    } PrinterAttribute;
    typedef struct
    {
        int count;
        PrinterAttribute *attributes;
    } PrinterAttributeList;
    // CUPS printer attribute query functions (macOS/Linux only)
    FFI_PLUGIN_EXPORT PrinterAttribute *cups_get_printer_attribute(const char *printer_name, const char *attribute_name, const char *username, const char *password);
    FFI_PLUGIN_EXPORT PrinterAttributeList *cups_get_printer_attributes(const char *printer_name, const char **attribute_names, int num_attributes, const char *username, const char *password);
    FFI_PLUGIN_EXPORT void free_printer_attribute(PrinterAttribute *attribute);
    FFI_PLUGIN_EXPORT void free_printer_attribute_list(PrinterAttributeList *attribute_list);