lib/printing_ffi_bindings_generated.dart


  bool cups_move_job(
    ffi.Pointer<ffi.Char> source_printer,
    int job_id,
    ffi.Pointer<ffi.Char> dest_printer,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_move_job(
      source_printer,
      job_id,
      dest_printer,
      username,
      password,
    );
  }

  late final _cups_move_jobPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Uint32, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('cups_move_job');
  late final _cups_move_job = _cups_move_jobPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  bool cups_set_job_priority(
    ffi.Pointer<ffi.Char> printer_name,
    int job_id,
    int priority,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_set_job_priority(
      printer_name,
      job_id,
      priority,
      username,
      password,
    );
  }

  late final _cups_set_job_priorityPtr = _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Uint32, ffi.Int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('cups_set_job_priority');
  late final _cups_set_job_priority = _cups_set_job_priorityPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, int, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// CUPS printer attribute query functions (macOS/Linux only)
  ffi.Pointer<PrinterAttribute> cups_get_printer_attribute(
    ffi.Pointer<ffi.Char> printer_name,
    ffi.Pointer<ffi.Char> attribute_name,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_get_printer_attribute(
      printer_name,
      attribute_name,
      username,
      password,
    );
  }

  late final _cups_get_printer_attributePtr = _lookup<ffi.NativeFunction<ffi.Pointer<PrinterAttribute> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('cups_get_printer_attribute');
  late final _cups_get_printer_attribute = _cups_get_printer_attributePtr.asFunction<ffi.Pointer<PrinterAttribute> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<PrinterAttributeList> cups_get_printer_attributes(
    ffi.Pointer<ffi.Char> printer_name,
    ffi.Pointer<ffi.Pointer<ffi.Char>> attribute_names,
    int num_attributes,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _cups_get_printer_attributes(
      printer_name,
      attribute_names,
      num_attributes,
      username,
      password,
    );
  }

  late final _cups_get_printer_attributesPtr = _lookup<ffi.NativeFunction<ffi.Pointer<PrinterAttributeList> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>(
    'cups_get_printer_attributes',
  );
  late final _cups_get_printer_attributes = _cups_get_printer_attributesPtr.asFunction<ffi.Pointer<PrinterAttributeList> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void free_printer_attribute(
    ffi.Pointer<PrinterAttribute> attribute,
  ) {
    return _free_printer_attribute(
      attribute,
    );
  }

  late final _free_printer_attributePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PrinterAttribute>)>>('free_printer_attribute');
  late final _free_printer_attribute = _free_printer_attributePtr.asFunction<void Function(ffi.Pointer<PrinterAttribute>)>();

  void free_printer_attribute_list(
    ffi.Pointer<PrinterAttributeList> attribute_list,
  ) {
    return _free_printer_attribute_list(
      attribute_list,
    );
  }

  late final _free_printer_attribute_listPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PrinterAttributeList>)>>('free_printer_attribute_list');
  late final _free_printer_attribute_list = _free_printer_attribute_listPtr.asFunction<void Function(ffi.Pointer<PrinterAttributeList>)>();
}

/// Struct for returning printer information
final class PrinterInfo extends ffi.Struct {
  external ffi.Pointer<ffi.Char> name;

  @ffi.Uint32()
  external int state;

  external ffi.Pointer<ffi.Char> url;

  external ffi.Pointer<ffi.Char> model;

  external ffi.Pointer<ffi.Char> location;

  external ffi.Pointer<ffi.Char> comment;

  @ffi.Bool()
  external bool is_default;

  @ffi.Bool()
  external bool is_available;
}

final class PrinterList extends ffi.Struct {
  @ffi.Int()
  external int count;

  external ffi.Pointer<PrinterInfo> printers;
}

/// Struct for returning print job information
final class JobInfo extends ffi.Struct {
  @ffi.Uint32()
  external int id;

  external ffi.Pointer<ffi.Char> title;

  @ffi.Uint32()
  external int status;
}

final class JobList extends ffi.Struct {
  @ffi.Int()
  external int count;

  external ffi.Pointer<JobInfo> jobs;
}

/// Struct for a single CUPS option choice
final class CupsOptionChoice extends ffi.Struct {
  external ffi.Pointer<ffi.Char> choice;

  external ffi.Pointer<ffi.Char> text;
}

/// Struct for a list of CUPS option choices
final class CupsOptionChoiceList extends ffi.Struct {
  @ffi.Int()
  external int count;

  external ffi.Pointer<CupsOptionChoice> choices;
}

/// Struct for a single CUPS printer option
final class CupsOption extends ffi.Struct {
  external ffi.Pointer<ffi.Char> name;

  external ffi.Pointer<ffi.Char> default_value;

  external CupsOptionChoiceList supported_values;
}

/// Struct for a list of CUPS printer options
final class CupsOptionList extends ffi.Struct {
  @ffi.Int()
  external int count;

  external ffi.Pointer<CupsOption> options;
}

/// Struct for a single Windows paper source (bin)
final class PaperSource extends ffi.Struct {
  @ffi.Short()
  external int id;

  external ffi.Pointer<ffi.Char> name;
}

final class PaperSourceList extends ffi.Struct {
  @ffi.Int()
  external int count;

  external ffi.Pointer<PaperSource> sources;
}

/// Struct for a single Windows media type
final class MediaType extends ffi.Struct {
  @ffi.Short()
  external int id;

  external ffi.Pointer<ffi.Char> name;
}

final class MediaTypeList extends ffi.Struct {
  @ffi.Int()
  external int count;

  external ffi.Pointer<MediaType> types;
}

/// Structs for Windows printer capabilities
final class PaperSize extends ffi.Struct {
  @ffi.Short()
  external int id;

  external ffi.Pointer<ffi.Char> name;

  @ffi.Float()
  external double width_mm;

  @ffi.Float()
  external double height_mm;
}

final class PaperSizeList extends ffi.Struct {
  @ffi.Int()
  external int count;

  external ffi.Pointer<PaperSize> papers;
}

final class Resolution extends ffi.Struct {
  @ffi.Long()
  external int x_dpi;

  @ffi.Long()
  external int y_dpi;
}

final class ResolutionList extends ffi.Struct {
  @ffi.Int()
  external int count;

  external ffi.Pointer<Resolution> resolutions;
}

final class WindowsPrinterCapabilities extends ffi.Struct {
  external PaperSizeList paper_sizes;

  external PaperSourceList paper_sources;

  external ResolutionList resolutions;

  external MediaTypeList media_types;

  /// New fields for color mode and orientation capabilities
  @ffi.Bool()
  external bool is_color_supported;

  @ffi.Bool()
  external bool is_monochrome_supported;

  @ffi.Bool()
  external bool supports_landscape;
}

/// Struct for printer attribute query result
final class PrinterAttribute extends ffi.Struct {
  external ffi.Pointer<ffi.Char> attribute_name;

  external ffi.Pointer<ffi.Char> attribute_value;

  /// For array attributes
  @ffi.Int()
  external int value_count;

  /// For array attributes (NULL if value_count <= 1)
  external ffi.Pointer<ffi.Pointer<ffi.Char>> array_values;
}

final class PrinterAttributeList extends ffi.Struct {
  @ffi.Int()
  external int count;

  external ffi.Pointer<PrinterAttribute> attributes;
}
